--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 static int getVersionCode(branch) {
     def versionCodeCommand = "git rev-list --count " + branch
-    return 1 //versionCodeCommand.execute().text.trim().toInteger()
+    return versionCodeCommand.execute().text.trim().toInteger()
 }
 
 static def getBranchName() {
