Change: CircleCi Automatic Upload

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,9 +135,9 @@ workflows:
           requires:
            - release
            - tests
-#      - bintray:
-#          filters:
-#            branches:
-#              only: master
-#          requires:
-#            - stable
+      - bintray:
+          filters:
+            branches:
+              only: master
+          requires:
+          - stable
