--- a/versions.gradle
+++ b/versions.gradle
@@ -9,6 +9,22 @@ buildscript {
         kotlin_version = '1.3.21'
 
 
+        // ------------ Gradle --------------
+        gradle_build_version = '3.3.2'
+
+
+        // ------------ Bintray -------------
+        bintray_version = '1.8.4'
+
+
+        // ------------ Dokka ---------------
+        dokka_version = '0.9.18'
+
+
+        // ---------- dcendents -------------
+        dcendents_version = '2.1'
+
+
         // ------------- Test ---------------
         junitVersion = '4.12'
         testRunnerVersion = '1.1.1'
