Change: lib name on bintray. Clean up old support const

--- a/coveritem/build.gradle
+++ b/coveritem/build.gradle
@@ -23,7 +23,7 @@ ext {
     bintrayName = 'coveritem'
 
     publishedGroupId = 'com.artear.cover'
-    libraryName = 'Cover Item'
+    libraryName = 'Cover-Item'
     artifact = 'coveritem'
 
     libraryDescription = 'coveritem library'
