Change: Version 0.0.3 - Bintray Fix

--- a/coveritem/build.gradle
+++ b/coveritem/build.gradle
@@ -20,7 +20,7 @@ plugins{
 
 ext {
     bintrayRepo = 'Android'
-    bintrayName = 'coveritem'
+    bintrayName = 'Cover-Item'
 
     publishedGroupId = 'com.artear.cover'
     libraryName = 'Cover-Item'
