--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 *.iml
 .gradle
 /local.properties
-/.idea/
+/.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+*.hprof
+*.p12
+/android-profile
