Add: new functionality for span content and a little example. Change: ContentAdapter has been adapted, and reorganize package and classes.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
 
     //Support
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation "androidx.recyclerview:recyclerview:$recyclerVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
 }
