--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     //Test
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test:core:$testCoreVersion"
-    androidTestImplementation "androidx.test.ext:junit:$testCoreVersion"
+    androidTestImplementation "androidx.test.ext:junit:$testExtJunitVersion"
     androidTestImplementation "androidx.test:runner:$testRunnerVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
 
