--- a/versions.gradle
+++ b/versions.gradle
@@ -31,6 +31,7 @@ buildscript {
         testRunnerVersion = '1.2.0'
         espressoCoreVersion = '3.2.0'
         testCoreVersion = '1.2.0'
+        testExtJunitVersion = '1.1.1'
 
 
         // ------------  Gson  --------------
