--- a/versions.gradle
+++ b/versions.gradle
@@ -33,6 +33,9 @@ buildscript {
         testCoreVersion = '1.2.0'
         testExtJunitVersion = '1.1.1'
 
+        mockitoVersion = '2.28.2'
+        okHttpVersion =  "3.14.2"
+
 
         // ------------  Gson  --------------
         gsonVersion = '2.8.5'
