Change: update bintray name. and safe mode parse for all optionals

--- a/stevedoreitems/build.gradle
+++ b/stevedoreitems/build.gradle
@@ -20,7 +20,7 @@ plugins {
 
 ext {
     bintrayRepo = 'Android'
-    bintrayName = 'StevedoreItems'
+    bintrayName = 'Stevedore-Items'
 
     publishedGroupId = 'com.artear.stevedore'
     libraryName = 'Stevedore-Items'
