--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ static def getBranchName() {
 }
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion sdkVersion
+    buildToolsVersion buildToolsVersion
 
     def branch = getBranchName()
     def vCode = 0 + getVersionCode(branch)
@@ -40,17 +40,19 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     //Test
-    testImplementation "junit:junit:$junitVersion"
-    androidTestImplementation "androidx.test:core:$testCoreVersion"
-    androidTestImplementation "androidx.test.ext:junit:$testExtJunitVersion"
-    androidTestImplementation "androidx.test:runner:$testRunnerVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
+    testImplementation lib.junit.library
+    testImplementation lib.mockito.library
+    testImplementation lib.square.okHttp
+    androidTestImplementation lib.androidx.testCore
+    androidTestImplementation lib.androidx.extJunit
+    androidTestImplementation lib.androidx.testRunner
+    androidTestImplementation lib.espresso.core
 
     //Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation lib.kotlin.standardLib
 
     //Support
-    implementation "androidx.appcompat:appcompat:$appCompatVersion"
-    implementation "androidx.recyclerview:recyclerview:$recyclerVersion"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation lib.androidx.appcompat
+    implementation lib.androidx.recycler
+    implementation lib.androidx.constraintLayout
 }
