--- a/stevedoreitems/build.gradle
+++ b/stevedoreitems/build.gradle
@@ -4,9 +4,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintray_version"
-        classpath "com.github.dcendents:android-maven-gradle-plugin:$dcendents_version"
-        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokka_version"
+        classpath lib.plugin.bintray
+        classpath lib.plugin.dcendents
+        classpath lib.plugin.dokka
     }
 }
 
@@ -50,8 +50,8 @@ static def getBranchName() {
 }
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion sdkVersion
+    buildToolsVersion buildToolsVersion
 
     def branch = getBranchName()
     def vCode = 0 + getVersionCode(branch)
@@ -81,29 +81,29 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //Test
-    testImplementation "junit:junit:$junitVersion"
-    androidTestImplementation "androidx.test:core:$testCoreVersion"
-    androidTestImplementation "androidx.test.ext:junit:$testExtJunitVersion"
-    androidTestImplementation "androidx.test:runner:$testRunnerVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
 
-    testImplementation "org.mockito:mockito-core:$mockitoVersion"
-    testImplementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    //Test
+    testImplementation lib.junit.library
+    testImplementation lib.mockito.library
+    testImplementation lib.square.okHttp
+    androidTestImplementation lib.androidx.testCore
+    androidTestImplementation lib.androidx.extJunit
+    androidTestImplementation lib.androidx.testRunner
+    androidTestImplementation lib.espresso.core
 
     //Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation lib.kotlin.standardLib
 
     //Gson
-    implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation lib.gson.library
 
     //Artear
-    implementation "com.artear.tools:tools:$toolsVersion"
+    implementation lib.artear.tools
 
     //Support
-    implementation "androidx.appcompat:appcompat:$appCompatVersion"
-    implementation "androidx.recyclerview:recyclerview:$recyclerVersion"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation lib.androidx.appcompat
+    implementation lib.androidx.recycler
+    implementation lib.androidx.constraintLayout
 
 }
 
