--- a/versions.gradle
+++ b/versions.gradle
@@ -1,58 +1,99 @@
 buildscript {
     ext {
+        sdkVersion = 28
+        buildToolsVersion = "28.0.3"
+        libraryVersion = "0.2.5"
+        versionLib = [
+                kotlinVersion   : '1.3.31',
+                android         : [
+                        gradleBuildToolsVersion: '3.4.1'
+                ],
+                artear          : [
+                        toolsVersion: "0.0.19"
+                ],
+                espresso        : [
+                        coreVersion: "3.1.1"
+                ],
+                gsonVersion     : "2.8.5",
+                jsonVersion     : "20180813",
+                junitVersion    : "4.12",
+                mockitoVersion  : "2.28.2",
+                powermockVersion: "2.0.2",
+                square          : [
+                        okHttpVersion: "3.14.2",
+                ],
+                androidx        : [
+                        multidexVersion        : "2.0.1",
+                        appCompatVersion       : "1.0.2",
+                        constraintLayoutVersion: "1.1.3",
+                        recyclerVersion        : '1.0.0',
+                        testRunnerVersion      : "1.1.1",
+                        testCoreVersion        : "1.1.0",
+                        extJunitVersion        : "1.1.1"
+                ],
+                timberVersion   : "4.7.1",
+                plugin          : [
+                        depCheckerVersion: "0.21.0",
+                        bintrayVersion   : "1.8.4",
+                        dokkaVersion     : "0.9.18",
+                        dcendentsVersion : "2.1"
+                ]
+        ]
 
-        // -------- Library Version ---------
-        libraryVersion = '0.2.4'
-
-
-        // ------------ Kotlin --------------
-        kotlin_version = '1.3.31'
-        kotlinVersion = kotlin_version
-
-
-        // ------------ Gradle --------------
-        gradle_build_version = '3.4.1'
-
-
-        // ------------ Bintray -------------
-        bintray_version = '1.8.4'
-
-
-        // ------------ Dokka ---------------
-        dokka_version = '0.9.18'
-
-
-        // ---------- dcendents -------------
-        dcendents_version = '2.1'
-
-
-        // ------------- Test ---------------
-        junitVersion = '4.12'
-        testRunnerVersion = '1.2.0'
-        espressoCoreVersion = '3.2.0'
-        testCoreVersion = '1.2.0'
-        testExtJunitVersion = '1.1.1'
-
-        mockitoVersion = '2.28.2'
-        okHttpVersion =  "3.14.2"
-
-
-        // ------------  Gson  --------------
-        gsonVersion = '2.8.5'
-
-
-        // ----------- Framework ------------
-
-        // Material
-        recyclerVersion = '1.0.0'
-
-        // AndroidX
-        appCompatVersion = '1.0.2'
-
-        // Constraint Layout
-        constraintLayoutVersion = '1.1.3'
-
-        // ------------ Artear --------------
-        toolsVersion = '0.0.19'
+        lib = [
+                kotlin   : [
+                        plugin     : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versionLib.kotlinVersion}",
+                        standardLib: "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versionLib.kotlinVersion}"
+                ],
+                android  : [
+                        toolsBuildGradle: "com.android.tools.build:gradle:${versionLib.android.gradleBuildToolsVersion}"
+                ],
+                artear   : [
+                        tools: "com.artear.tools:tools:${versionLib.artear.toolsVersion}"
+                ],
+                espresso : [
+                        core: "androidx.test.espresso:espresso-core:${versionLib.espresso.coreVersion}"
+                ],
+                gson     : [
+                        library: "com.google.code.gson:gson:${versionLib.gsonVersion}"
+                ],
+                junit    : [
+                        library: "junit:junit:${versionLib.junitVersion}"
+                ],
+                mockito  : [
+                        library: "org.mockito:mockito-core:${versionLib.mockitoVersion}"
+                ],
+                powermock: [
+                        core     : "org.powermock:powermock-core:${versionLib.powermockVersion}",
+                        junit    : "org.powermock:powermock-module-junit4:${versionLib.powermockVersion}",
+                        junitRule: "org.powermock:powermock-module-junit4-rule:${versionLib.powermockVersion}",
+                        mockito2 : "org.powermock:powermock-api-mockito2:${versionLib.powermockVersion}",
+                        easyMock : "org.powermock:powermock-api-easymock:${versionLib.powermockVersion}"
+                ],
+                material : [
+                        library: "com.google.android.material:material:${versionLib.materialVersion}"
+                ],
+                square   : [
+                        okHttp             : "com.squareup.okhttp3:okhttp:${versionLib.square.okHttpVersion}",
+                        okHttpMockWebServer: "com.squareup.okhttp3:mockwebserver:${versionLib.square.okHttpVersion}"
+                ],
+                androidx : [
+                        multidex        : "androidx.multidex:multidex:${versionLib.androidx.multidexVersion}",
+                        appcompat       : "androidx.appcompat:appcompat:${versionLib.androidx.appCompatVersion}",
+                        constraintLayout: "androidx.constraintlayout:constraintlayout:${versionLib.androidx.constraintLayoutVersion}",
+                        recycler        : "androidx.recyclerview:recyclerview:${versionLib.androidx.recyclerVersion}",
+                        testRunner      : "androidx.test:runner:${versionLib.androidx.testRunnerVersion}",
+                        testCore        : "androidx.test:core:${versionLib.androidx.testCoreVersion}",
+                        extJunit        : "androidx.test.ext:junit:${versionLib.androidx.extJunitVersion}"
+                ],
+                timber   : [
+                        library: "com.jakewharton.timber:timber:${versionLib.timberVersion}"
+                ],
+                plugin   : [
+                        bintray  : "com.jfrog.bintray.gradle:gradle-bintray-plugin:${versionLib.plugin.bintrayVersion}",
+                        dcendents: "com.github.dcendents:android-maven-gradle-plugin:${versionLib.plugin.dcendentsVersion}",
+                        dokka    : "org.jetbrains.dokka:dokka-android-gradle-plugin:${versionLib.plugin.dokkaVersion}"
+                ]
+        ]
     }
 }
