Change: Version 0.2.7         ArtearItemDecoration Implementation

--- a/stevedoreitems/build.gradle
+++ b/stevedoreitems/build.gradle
@@ -64,7 +64,7 @@ android {
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 28
+        targetSdkVersion sdkVersion
         versionCode vCode
         versionName libraryVersion
 
