--- a/versions.gradle
+++ b/versions.gradle
@@ -2,9 +2,9 @@ buildscript {
     ext {
         sdkVersion = 28
         buildToolsVersion = "28.0.3"
-        libraryVersion = "0.2.10"
+        libraryVersion = "0.2.11"
         versionLib = [
-                kotlinVersion   : '1.3.40',
+                kotlinVersion   : '1.3.41',
                 android         : [
                         gradleBuildToolsVersion: '3.4.2'
                 ],
@@ -26,7 +26,7 @@ buildscript {
                         multidexVersion        : "2.0.1",
                         appCompatVersion       : "1.0.2",
                         constraintLayoutVersion: "1.1.3",
-                        recyclerVersion        : '1.0.0',
+                        recyclerviewVersion    : '1.0.0',
                         testRunnerVersion      : "1.2.0",
                         testCoreVersion        : "1.2.0",
                         extJunitVersion        : "1.1.1"
@@ -81,7 +81,7 @@ buildscript {
                         multidex        : "androidx.multidex:multidex:${versionLib.androidx.multidexVersion}",
                         appcompat       : "androidx.appcompat:appcompat:${versionLib.androidx.appCompatVersion}",
                         constraintLayout: "androidx.constraintlayout:constraintlayout:${versionLib.androidx.constraintLayoutVersion}",
-                        recycler        : "androidx.recyclerview:recyclerview:${versionLib.androidx.recyclerVersion}",
+                        recyclerview    : "androidx.recyclerview:recyclerview:${versionLib.androidx.recyclerviewVersion}",
                         testRunner      : "androidx.test:runner:${versionLib.androidx.testRunnerVersion}",
                         testCore        : "androidx.test:core:${versionLib.androidx.testCoreVersion}",
                         extJunit        : "androidx.test.ext:junit:${versionLib.androidx.extJunitVersion}"
