--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,6 @@ dependencies {
 
     //Support
     implementation lib.androidx.appcompat
-    implementation lib.androidx.recycler
+    implementation lib.androidx.recyclerview
     implementation lib.androidx.constraintLayout
 }
